-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8-pool, 11, 17
-
Component/s: core-libs
-
b17
-
os_x
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8274377 | 17.0.2 | Christoph Langer | P3 | Resolved | Fixed | b01 |
| JDK-8275733 | 15.0.6 | Olga Mikhaltcova | P3 | Resolved | Fixed | b02 |
| JDK-8275734 | 13.0.10 | Olga Mikhaltcova | P3 | Resolved | Fixed | b02 |
| JDK-8274545 | 11.0.14-oracle | Prajwal Kumaraswamy | P3 | Resolved | Fixed | b01 |
| JDK-8274354 | 11.0.13 | Christoph Langer | P3 | Resolved | Fixed | b01 |
| JDK-8295281 | openjdk8u362 | Olga Mikhaltcova | P3 | Resolved | Fixed | b01 |
| JDK-8358848 | shenandoah8u362 | Olga Mikhaltcova | P3 | Resolved | Fixed | b01 |
| JDK-8274908 | 8u321 | Prajwal Kumaraswamy | P3 | Resolved | Fixed | b01 |
10.16 1.8.0_152-b16
10.16 1.8.0_162-b12
10.16 9.0.4+11
10.16 10.0.1+10
10.16 10.0.2+13
10.16 11.0.2+9
10.16 12.0.2+10
10.16 13+33
10.16 13.0.2+8
10.16 14+36-1461
10.16 14.0.2+12-46
10.16 15+35-1559
10.16 15.0.2+7-27
10.16 16+36-2231
10.16 16.0.1+9-24
12.0 17-ea+25-2252
12.0 17-ea+29-2576
I understand that some changes have been backported, but I'm not sure if they have been released or if they are correct.
I know of two ways to get the right answer regardless of the linked SDK:
1. Run this program as follows:
String[] cmd = { "/usr/bin/sw_vers", "-productVersion" };
String[] env = { "SYSTEM_VERSION_COMPAT=0" };
2. Parse the file /System/Library/CoreServices/.SystemVersionPlatform.plist
[note the leading dot in the name]
These steps would be needed only if the apparent system version is 10.16.
See https://gitmemory.com/issue/ziglang/zig/7569/756422179 for more information.
- backported by
-
JDK-8274354 Most JDK releases report macOS version 12 as 10.16 instead of 12.0
-
- Resolved
-
-
JDK-8274377 Most JDK releases report macOS version 12 as 10.16 instead of 12.0
-
- Resolved
-
-
JDK-8274545 Most JDK releases report macOS version 12 as 10.16 instead of 12.0
-
- Resolved
-
-
JDK-8274908 Most JDK releases report macOS version 12 as 10.16 instead of 12.0
-
- Resolved
-
-
JDK-8275733 Most JDK releases report macOS version 12 as 10.16 instead of 12.0
-
- Resolved
-
-
JDK-8275734 Most JDK releases report macOS version 12 as 10.16 instead of 12.0
-
- Resolved
-
-
JDK-8295281 Most JDK releases report macOS version 12 as 10.16 instead of 12.0
-
- Resolved
-
-
JDK-8358848 Most JDK releases report macOS version 12 as 10.16 instead of 12.0
-
- Resolved
-
- duplicates
-
JDK-8274105 System property os.version incorrect for Mac OS 11.6 with XCode 11
-
- Closed
-
- relates to
-
JDK-8253702 BigSur version number reported as 10.16, should be 11.nn
-
- Resolved
-
- links to
-
Commit
openjdk/jdk8u-dev/43cfe27f
-
Commit
openjdk/jdk11u/c9c72884
-
Commit
openjdk/jdk13u-dev/b94739bf
-
Commit
openjdk/jdk15u-dev/c3e3cc15
-
Commit
openjdk/jdk17u/7b67581a
-
Commit
openjdk/jdk/3b1b8fc6
-
Review
openjdk/jdk8u-dev/126
-
Review
openjdk/jdk11u/12
-
Review
openjdk/jdk13u-dev/279
-
Review
openjdk/jdk15u-dev/120
-
Review
openjdk/jdk17u/85
-
Review
openjdk/jdk/5619
-
Review
openjdk/jdk/5633