8269850: Most JDK releases report macOS version 12 as 10.16 instead of 12.0 Replaced the code extracting the version from the SystemVersion.plist to extract the read version using the hidden link:    /System/Library/CoreServices/.SystemVersionPlatform.plist Its contents are not dependent on the SYSTEM_VERSION_COMPAT environment variable. With this change, 11.5 reports the 11.5.1 minor version and os.version 11.6 is correctly reported. The change can be backported as needed.